app/assets/stylesheets/graph.less
@nodeColor: #3182bd;
@linkColor: #aaa;
@nodeTextColor: #fff;

svg {
    border: 1px solid lightgray;
}

marker#end {
    fill: @linkColor;
    stroke: @linkColor;
    stroke-width: 1.5px;
}

.link {
    fill: none;
    stroke: @linkColor;
    stroke-width: 1.5px;
    opacity: .7;
    marker-end: url(#end);
    
    transition: opacity 250ms;
    -webkit-transition: opacity 250ms;
    -moz-transition: opacity 250ms;
}

.node > .nodeRect {
    fill: @nodeColor;
    stroke: darken(@nodeColor, 10%);
    cursor: default;
}

.fixed > .nodeRect {
    fill: lighten(@nodeColor, 20%);
}

.node > .linkRect {
    fill: white;
    stroke: darken(@nodeColor, 10%);
    cursor: pointer;
    opacity: 0;
}

.node > .nodeText {
    font-size: 6px;
    fill: @nodeTextColor;
    cursor: default;
}

.node .linkText {
    font-size: 6px;
    fill: @nodeColor;
    cursor: pointer;
    opacity: 0;
}

